--- a/gb/20/7/14/n12254275.md
+++ b/gb/20/7/14/n12254275.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/qezyik366/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/qezyik366/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/qezyik366/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/qezyik366/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/qezyik366/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qezyik366/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/qezyik366/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/qezyik366/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/qezyik366/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/qezyik366/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/qezyik366/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/qezyik366/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/qezyik366/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/qezyik366/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/qezyik366/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/qezyik366/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/qezyik366/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/qezyik366/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/qezyik366/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/qezyik366/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/qezyik366/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/qezyik366/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/qezyik366/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/qezyik366/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/qezyik366/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/qezyik366/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/qezyik366/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/qezyik366/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/qezyik366/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/qezyik366/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/qezyik366/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/qezyik366/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/qezyik366/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/qezyik366/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/qezyik366/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/qezyik366/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/qezyik366/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/qezyik366/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/qezyik366/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/qezyik366/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/qezyik366/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/qezyik366/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/qezyik366/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/qezyik366/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/qezyik366/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/qezyik366/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/qezyik366/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>枪击案继续上升 流弹打死一岁男孩</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2020年07月14日讯】（大纪元记者施萍纽约报导）纽约市的中共病毒死亡数量刚回落到零，另一个“瘟疫”——<ahref="https://github.com/qezyik366/djy/blob/master/gb/tag/%E6%9E%AA%E5%87%BB%E6%A1%88.md#1">枪击案</a>就上升到了新高度。上周末，纽约市各区枪声四起，布碌崙街道上的一颗<ahref="https://github.com/qezyik366/djy/blob/master/gb/tag/%E6%B5%81%E5%BC%B9.md#1">流弹</a>打死了一个不到2岁的小男孩；同一个区的另一处，一颗流弹打伤了一个12岁的少年。自从5月底纽约市跟随全国爆发街头暴力抗议以来，枪击案频发，仅过去一周内的枪击案就达到了一个新的纪录，比去年同期上升了2.5倍。</p>
-<p>根据警方公布的数据，在7月5日到7月11日的一周之内，纽约市共发生<ahref="https://github.com/qezyik366/djy/blob/master/gb/tag/%E6%9E%AA%E5%87%BB%E6%A1%88.md#1">枪击案</a>68起，92人被枪打中，其中11人死亡。2019年的这个时期，全市只发生了22起枪击案，受害人30人。</p>
-<p>另据《纽约邮报》消息，从上周六中午开始的15个小时内，全市就出现了15起枪击案。而在上周日（7月12日）半夜11点半，布碌崙贝福德史岱文森地区发生了一个悲剧，一家人在游乐场旁吃烧烤时，一通<ahref="https://github.com/qezyik366/djy/blob/master/gb/tag/%E6%B5%81%E5%BC%B9.md#1">流弹</a>射过来，打死了 一个名为达维尔（DAvell Gardner）的22个月大的男孩，同时，有三个成年人被射伤，凶手逃走。到目前为止警察还没抓到嫌犯。</p>
+<p>【大纪元2020年07月14日讯】（大纪元记者施萍纽约报导）纽约市的中共病毒死亡数量刚回落到零，另一个“瘟疫”——<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%9E%AA%E5%87%BB%E6%A1%88.md#1">枪击案</a>就上升到了新高度。上周末，纽约市各区枪声四起，布碌崙街道上的一颗<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%B5%81%E5%BC%B9.md#1">流弹</a>打死了一个不到2岁的小男孩；同一个区的另一处，一颗流弹打伤了一个12岁的少年。自从5月底纽约市跟随全国爆发街头暴力抗议以来，枪击案频发，仅过去一周内的枪击案就达到了一个新的纪录，比去年同期上升了2.5倍。</p>
+<p>根据警方公布的数据，在7月5日到7月11日的一周之内，纽约市共发生<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%9E%AA%E5%87%BB%E6%A1%88.md#1">枪击案</a>68起，92人被枪打中，其中11人死亡。2019年的这个时期，全市只发生了22起枪击案，受害人30人。</p>
+<p>另据《纽约邮报》消息，从上周六中午开始的15个小时内，全市就出现了15起枪击案。而在上周日（7月12日）半夜11点半，布碌崙贝福德史岱文森地区发生了一个悲剧，一家人在游乐场旁吃烧烤时，一通<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%B5%81%E5%BC%B9.md#1">流弹</a>射过来，打死了 一个名为达维尔（DAvell Gardner）的22个月大的男孩，同时，有三个成年人被射伤，凶手逃走。到目前为止警察还没抓到嫌犯。</p>
 <p>市长在昨天的新闻发布会上称，这个消息是“骇人听闻的”，并发誓一定要抓到凶手。</p>
 <p>“今天早晨起来听到一岁孩子在街头被杀的消息，真令人痛心。”白思豪说，“这是我们不能接受的，是我们不能不管的事情。”</p>
 <p>他说，一定要动用一切资源抓到杀人犯，而且他相信，纽约警察局能够做到这一点。</p>
@@ -21,47 +21,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/20/6/27/n12215489.md#1">纽约周五凌晨多地发生枪击案</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/20/7/2/n12226350.md#1">11岁男孩被流弹击中腿部</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/20/7/6/n12235213.md#1">周日纽约市枪击案频发  至少6人被杀数十人受伤</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/20/7/6/n12236274.md#1">独立日周末 美国主要城市枪击案激增</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/20/7/7/n12237908.md#1">NYPD局长：祸不单行 纽约枪击案大增</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/20/7/11/n12247980.md#1">南洛杉矶上月凶杀枪击案翻倍增</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/22/4/12/n13710097.md#1">布鲁崙36街地铁站枪击案 10人中枪共16伤（更新中）</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/22/4/12/n13709991.md#1">【直播】纽约布碌崙地铁站发生枪击和爆炸</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/22/4/12/n13710093.md#1">快讯：布碌崙地铁一早传枪击 B、W、R等线停摆</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/22/4/12/n13709620.md#1">不愿纽约华埠监狱动工 社区力倡旧址翻新</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/6/27/n12215489.md#1">纽约周五凌晨多地发生枪击案</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/7/2/n12226350.md#1">11岁男孩被流弹击中腿部</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/7/6/n12235213.md#1">周日纽约市枪击案频发  至少6人被杀数十人受伤</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/7/6/n12236274.md#1">独立日周末 美国主要城市枪击案激增</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/7/7/n12237908.md#1">NYPD局长：祸不单行 纽约枪击案大增</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/7/11/n12247980.md#1">南洛杉矶上月凶杀枪击案翻倍增</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13740441.md#1">纽约国会第10选区吸引民主党至少6人竞争</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13740438.md#1">纽约新选区地图草案 给皇后区选举带来啥变化？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13740417.md#1">纽约州长霍楚宣布 严打枪支犯罪和恐怖主义</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13740411.md#1">纽约台裔社团：把“统促会”列为恐怖组织</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/4/n9922246.md#1" target="_blank">林辉：文革冤案中周恩来的落井下石与冷酷</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/31/n10103847.md#1" target="_blank">老伴绝处逢生 八旬警察举杯感恩</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/7/n11436585.md#1" target="_blank">李小刚：十年文革灾难性后果探究</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/5/2/n7794877.md#1" target="_blank">矿难幸存者神奇扔掉双拐重新站起</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/22/3/23/n13668398.md#1">【百年真相】最危险的人？王沪宁如何给习当高参</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/21/12/30/n13470511.md#1">【百年真相】赵紫阳差点被打成“美国间谍”</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/22/4/5/n13697243.md#1">【奇案】“午时三刻”开斩前翻案的奇案</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/22/4/4/n13693691.md#1">【馨香雅句】班昭留给后世女子的智慧</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/22/3/16/n13649085.md#1">【人生之钥】官家公子强抢民女 遭“绝后”的惩戒</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/22/4/11/n13709476.md#1">【秦鹏直播】上海书记被骂戏精 李克强现蹊跷事</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/22/4/12/n13709669.md#1">【军事热点】芬兰和瑞典可能在今夏加入北约</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/22/4/11/n13709449.md#1">【新闻看点】传孙春兰发火 “咬紧牙关”推清零</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/22/3/16/n13649272.md#1">营养师推荐六种Costco健康食物 可储存备用</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/22/4/10/n13708422.md#1">哈佛营养师推荐：早餐首选食物 抗大脑衰老</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/22/4/10/n13708544.md#1">网传录音：上海警察抓夫妻进方舱 妻以死抗争</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/22/4/10/n13708522.md#1">陈浩民妻吐槽上海封控生活：两斤菜花逾千元</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/22/4/10/n13708485.md#1">范冰冰赴韩拍戏出意外？额头伤疤近照曝光</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/22/4/11/n13708587.md#1">上海网红1根黄瓜吃两天 封城前后对比照惊人</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/22/4/11/n13709029.md#1">贾静雯携梧桐妹户外野餐 母女合影宛如姐妹</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/22/4/11/n13709399.md#1">杨紫琼确诊痊愈后首露面 身形消瘦引关注</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/22/4/10/n13708269.md#1">69岁的他血管才32岁 香蕉1吃法抗氧化力翻倍</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/22/4/11/n13709139.md#1">蜂蜜加咖啡胜过类固醇？研究：改善咳嗽很有效</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/22/4/7/n13702657.md#1">头皮容易出油、掉发？这样洗头保护头皮、不发痒</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/22/4/6/n13698839.md#1">雨天真的容易关节痛？2方法保养、防发作</a></li>
-<li><a href="https://github.com/qezyik366/djy/blob/master/gb/22/4/10/n13708184.md#1">极简生活不是狂丢东西 懂这个心法才是最高境界</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/16/n11943195.md#1">日媒体人评台湾防疫2大功臣 第一名竟非陈时中</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/17/n11946346.md#1">【现场视频】听信中共谎言 返京人挤爆机场</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/17/n11945722.md#1">【翻墙必看】官媒反常 批赵立坚“下作”？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测中共病毒</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/qezyik366/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/qezyik366/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/7/14/n12254275.htm">枪击案继续上升 流弹打死一岁男孩</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/7/14/n12254275.htm">枪击案继续上升 流弹打死一岁男孩</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/qezyik366/djy/blob/master/gb/20/7/14/n12254275.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/qezyik366/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qezyik366/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/qezyik366/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/qezyik366/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/qezyik366/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qezyik366/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/qezyik366/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qezyik366/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/qezyik366/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qezyik366/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/qezyik366/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qezyik366/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/qezyik366/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qezyik366/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/qezyik366/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qezyik366/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/qezyik366/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qezyik366/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/qezyik366/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qezyik366/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/qezyik366/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qezyik366/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/qezyik366/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qezyik366/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/qezyik366/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qezyik366/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/qezyik366/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qezyik366/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/qezyik366/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qezyik366/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/qezyik366/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qezyik366/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/qezyik366/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qezyik366/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/qezyik366/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qezyik366/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/qezyik366/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qezyik366/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/qezyik366/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qezyik366/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/qezyik366/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qezyik366/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/qezyik366/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qezyik366/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/qezyik366/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qezyik366/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/qezyik366/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qezyik366/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/20/7/14/n12254275.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
