--- a/gb/22/5/17/n13739350.md
+++ b/gb/22/5/17/n13739350.md
@@ -167,7 +167,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ychojm359/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/18/n11120824.md#1" target="_blank">共产暴政录：5.12汶川地震后 中共嫁祸法轮功</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/20/n10578907.md#1" target="_blank">【细语人生】见证大法的神奇（13）</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/21/n11270152.md#1" target="_blank">中共暴政录：支持苏俄入侵中国的中东路事件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/2/21/n11886559.md#1" target="_blank">修炼“真善忍”化解家庭恩怨的德国人</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
